[gd_scene load_steps=30 format=3 uid="uid://dmelq6wcmy6ca"]

[ext_resource type="Script" path="res://scenes/FPScontroller/walking.gd" id="1_4uc2b"]
[ext_resource type="AudioStream" uid="uid://ds11r6qpupctv" path="res://audio/jump.mp3" id="2_4u70s"]
[ext_resource type="Script" path="res://scenes/FPScontroller/hud.gd" id="2_drd4e"]
[ext_resource type="PackedScene" uid="uid://bf7vjlnfeveqt" path="res://scenes/FPScontroller/weapon.tscn" id="3_3x43m"]
[ext_resource type="Shader" path="res://shaders/metal.gdshader" id="3_nr4tn"]
[ext_resource type="PackedScene" uid="uid://8v2imhjero6g" path="res://models/crystal_27.fbx" id="3_sucdg"]
[ext_resource type="Texture2D" uid="uid://cncpbkw3a782v" path="res://textures/kenney-grey-checkerboard-cc0.png" id="4_1s17f"]
[ext_resource type="Texture2D" uid="uid://dyfx63ttt0825" path="res://textures/powder_snow_outline.png" id="4_agnch"]
[ext_resource type="AudioStream" uid="uid://bxwyhn6mr1jmc" path="res://audio/projectile_bounce.wav" id="4_pic8r"]
[ext_resource type="Texture2D" uid="uid://c37wpn76pt38q" path="res://textures/stamina_bar_bg.png" id="5_26kly"]
[ext_resource type="Texture2D" uid="uid://bsfvwpgol7jyc" path="res://textures/20140826065256!GCNBiosShine.png" id="5_dsc2f"]
[ext_resource type="AudioStream" uid="uid://cxeo1216svse3" path="res://audio/reload.wav" id="5_gv7hy"]
[ext_resource type="Texture2D" uid="uid://gwoqvf38jpr" path="res://textures/plazma_chunk_empty.png" id="6_66a8s"]
[ext_resource type="Texture2D" uid="uid://bvlhgdaeysvlu" path="res://textures/stamina_bar_fg.png" id="6_eurmp"]
[ext_resource type="Texture2D" uid="uid://4qjm42mly4hu" path="res://textures/divider-fade-000.png" id="7_45gak"]
[ext_resource type="Texture2D" uid="uid://d06cuv8hpnhqo" path="res://textures/plazma_chunk_full.png" id="7_gmwok"]
[ext_resource type="Texture2D" uid="uid://bs51x4pxkd6hv" path="res://textures/mega_00.png" id="10_7ivy8"]
[ext_resource type="Texture2D" uid="uid://161xctj4lrjm" path="res://textures/strzelba_00.png" id="10_6615p"]
[ext_resource type="Shader" path="res://shaders/interline.gdshader" id="10_adwtl"]
[ext_resource type="Texture2D" uid="uid://btioqxpstfa2f" path="res://textures/strzelba_06.png" id="11_o28dw"]
[ext_resource type="Texture2D" uid="uid://4qdrchgcpc2a" path="res://textures/mega_03.png" id="11_yje0k"]
[ext_resource type="Shader" path="res://shaders/crosshair_invert.gdshader" id="21_imk4r"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8ap56"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1dplu"]
render_priority = 0
shader = ExtResource("3_nr4tn")
shader_parameter/reflection_color = Color(0.501407, 0.501406, 0.501406, 1)
shader_parameter/reflection_strength = -1.485
shader_parameter/specular_strength = 0.191
shader_parameter/metallic_strength = 0.155
shader_parameter/roughness_value = 0.28
shader_parameter/reflection_offset = Vector2(0.28, 0)
shader_parameter/reflection_scale = Vector2(1, 1)
shader_parameter/diffuse_texture = ExtResource("4_1s17f")
shader_parameter/reflection_map = ExtResource("5_dsc2f")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2koi2"]

[sub_resource type="PrismMesh" id="PrismMesh_qyn3w"]
size = Vector3(1, 1, 0.25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kd7xi"]
shader = ExtResource("21_imk4r")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fykim"]
shader = ExtResource("10_adwtl")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2nykl"]
properties/0/path = NodePath(".:team")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Head:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:scoped")
properties/4/spawn = true
properties/4/replication_mode = 2

[node name="Player" type="CharacterBody3D"]
physics_interpolation_mode = 1
collision_layer = 2
floor_stop_on_slope = false
script = ExtResource("1_4uc2b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8ap56")

[node name="Foot_sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.140376, 0)
stream = ExtResource("2_4u70s")
max_distance = 20.0

[node name="WM" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="WM"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("ShaderMaterial_1dplu")
mesh = SubResource("CapsuleMesh_2koi2")

[node name="This_way" type="MeshInstance3D" parent="WM"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 1.21144, -0.878098)
mesh = SubResource("PrismMesh_qyn3w")

[node name="crystal_27" parent="WM" instance=ExtResource("3_sucdg")]
transform = Transform3D(0.6, 0, 0, 0, 0.487945, 0, 0, 0, 0.6, 0, 1.09111, 0)
visible = false

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)

[node name="Player_cam" type="Camera3D" parent="Head"]
unique_name_in_owner = true
cull_mask = 524285
doppler_tracking = 2

[node name="Weapon" parent="Head/Player_cam" instance=ExtResource("3_3x43m")]
unique_name_in_owner = true
damage = 600
max_ammo = 30

[node name="Shoot_sound" type="AudioStreamPlayer3D" parent="Head/Player_cam"]
stream = ExtResource("4_pic8r")
volume_db = -15.0

[node name="Reload_sound" type="AudioStreamPlayer3D" parent="Head/Player_cam"]
stream = ExtResource("5_gv7hy")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head"]
offset_right = 136.0
offset_bottom = 128.0

[node name="SubViewport" type="SubViewport" parent="Head/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="HeadViewModel" type="Node3D" parent="Head/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="Head/SubViewportContainer/SubViewport/HeadViewModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
cull_mask = 2

[node name="CanvasModulate" type="CanvasModulate" parent="."]
script = ExtResource("2_drd4e")

[node name="Control" type="Control" parent="CanvasModulate"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Ammo" type="Control" parent="CanvasModulate/Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mega" type="Control" parent="CanvasModulate/Control/Ammo"]
visible = false
anchors_preset = 0
offset_left = 1176.0
offset_top = 584.0
offset_right = 1216.0
offset_bottom = 624.0

[node name="Chunk1" type="TextureProgressBar" parent="CanvasModulate/Control/Ammo/Mega"]
texture_filter = 1
layout_mode = 0
offset_top = -8.0
offset_right = 64.0
offset_bottom = 32.0
scale = Vector2(3, 3)
max_value = 3.0
texture_under = ExtResource("10_7ivy8")
texture_progress = ExtResource("11_yje0k")

[node name="Strzelba" type="Control" parent="CanvasModulate/Control/Ammo"]
visible = false
anchors_preset = 0
offset_left = 1176.0
offset_top = 600.0
offset_right = 1216.0
offset_bottom = 640.0

[node name="Chunk1" type="TextureProgressBar" parent="CanvasModulate/Control/Ammo/Strzelba"]
texture_filter = 1
layout_mode = 0
offset_top = -24.0
offset_right = 64.0
offset_bottom = 16.0
scale = Vector2(3, 3)
max_value = 6.0
texture_under = ExtResource("10_6615p")
texture_progress = ExtResource("11_o28dw")

[node name="Automat" type="Control" parent="CanvasModulate/Control/Ammo"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Plazma" type="Control" parent="CanvasModulate/Control/Ammo"]
anchors_preset = 0
offset_left = 1192.0
offset_top = 608.0
offset_right = 1392.0
offset_bottom = 708.0

[node name="Chunk1" type="TextureProgressBar" parent="CanvasModulate/Control/Ammo/Plazma"]
texture_filter = 1
layout_mode = 0
offset_right = 64.0
offset_bottom = 40.0
scale = Vector2(3, 3)
max_value = 5.0
texture_under = ExtResource("6_66a8s")
texture_progress = ExtResource("7_gmwok")

[node name="Chunk2" type="TextureProgressBar" parent="CanvasModulate/Control/Ammo/Plazma"]
texture_filter = 1
layout_mode = 0
offset_left = 56.0
offset_right = 120.0
offset_bottom = 40.0
scale = Vector2(3, 3)
max_value = 5.0
texture_under = ExtResource("6_66a8s")
texture_progress = ExtResource("7_gmwok")

[node name="Chunk3" type="TextureProgressBar" parent="CanvasModulate/Control/Ammo/Plazma"]
texture_filter = 1
layout_mode = 0
offset_left = 112.0
offset_right = 176.0
offset_bottom = 40.0
scale = Vector2(3, 3)
max_value = 5.0
texture_under = ExtResource("6_66a8s")
texture_progress = ExtResource("7_gmwok")

[node name="Chunk4" type="TextureProgressBar" parent="CanvasModulate/Control/Ammo/Plazma"]
texture_filter = 1
layout_mode = 0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 72.0
scale = Vector2(3, 3)
max_value = 5.0
texture_under = ExtResource("6_66a8s")
texture_progress = ExtResource("7_gmwok")

[node name="Chunk5" type="TextureProgressBar" parent="CanvasModulate/Control/Ammo/Plazma"]
texture_filter = 1
layout_mode = 0
offset_left = 56.0
offset_top = 32.0
offset_right = 120.0
offset_bottom = 72.0
scale = Vector2(3, 3)
max_value = 5.0
texture_under = ExtResource("6_66a8s")
texture_progress = ExtResource("7_gmwok")

[node name="Chunk6" type="TextureProgressBar" parent="CanvasModulate/Control/Ammo/Plazma"]
texture_filter = 1
layout_mode = 0
offset_left = 112.0
offset_top = 32.0
offset_right = 176.0
offset_bottom = 72.0
scale = Vector2(3, 3)
max_value = 5.0
texture_under = ExtResource("6_66a8s")
texture_progress = ExtResource("7_gmwok")

[node name="Frozen_effect" type="TextureRect" parent="CanvasModulate/Control"]
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_agnch")

[node name="ColorRect" type="ColorRect" parent="CanvasModulate/Control"]
layout_mode = 0
offset_left = 808.0
offset_top = 704.0
offset_right = 1108.0
offset_bottom = 789.0
color = Color(0, 0, 0, 0.490196)

[node name="ColorRect2" type="ColorRect" parent="CanvasModulate/Control"]
layout_mode = 0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 576.0
color = Color(0, 0, 0, 0.490196)

[node name="Temp" type="Label" parent="CanvasModulate/Control"]
layout_mode = 0
offset_left = 912.0
offset_top = 720.0
offset_right = 1014.0
offset_bottom = 743.0
scale = Vector2(2, 2)
pivot_offset = Vector2(51, 11.5)
text = "Temperature"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasModulate/Control/Temp"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.5
offset_top = -21.75
offset_right = 195.5
offset_bottom = 22.25
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("7_45gak")
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasModulate/Control/Temp"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -194.5
offset_top = -21.75
offset_right = -2.5
offset_bottom = 22.25
grow_vertical = 2
texture = ExtResource("7_45gak")
metadata/_edit_use_anchors_ = true

[node name="Velocity" type="Label" parent="CanvasModulate/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 528.0
offset_right = 184.0
offset_bottom = 562.0
grow_vertical = 2
pivot_offset = Vector2(140, 18)

[node name="debug_info" type="Label" parent="CanvasModulate/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 168.0
offset_bottom = 112.0

[node name="Jump-o-meter" type="ProgressBar" parent="CanvasModulate/Control"]
layout_mode = 0
offset_left = 880.0
offset_top = 760.0
offset_right = 1040.0
offset_bottom = 787.0
fill_mode = 3
show_percentage = false

[node name="Stamina_meter" type="TextureProgressBar" parent="CanvasModulate/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 664.0
offset_top = 792.0
offset_right = 1256.0
offset_bottom = 808.0
nine_patch_stretch = true
texture_under = ExtResource("5_26kly")
texture_progress = ExtResource("6_eurmp")

[node name="Ammo_label" type="Label" parent="CanvasModulate/Control"]
layout_mode = 0
offset_left = 864.0
offset_top = 640.0
offset_right = 1064.0
offset_bottom = 679.0

[node name="crosshair" type="ColorRect" parent="CanvasModulate/Control"]
z_index = 3
material = SubResource("ShaderMaterial_kd7xi")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 952.0
offset_top = 376.0
offset_right = 962.0
offset_bottom = 386.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(5, 5)

[node name="Panel" type="Panel" parent="CanvasModulate"]
material = SubResource("ShaderMaterial_fykim")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_2nykl")
